--- a/src/layouts/ApplicationLayout.astro
+++ b/src/layouts/ApplicationLayout.astro
@@ -1,6 +1,10 @@
 ---
 import MainLayout from './MainLayout.astro';
 
+interface Props {
+	title: string;
+}
+
 const { title } = Astro.props;
 ---
 
