--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import MainLayout from '../layouts/MainLayout.astro';
 import ContactForm from '../components/ContactForm.astro';
 
 const contactInfo = {
@@ -14,7 +14,7 @@ const contactInfo = {
 };
 ---
 
-<Layout title="Contact Us">
+<MainLayout title="Contact Us">
   <main class="container mx-auto px-4 py-8">
     <div class="max-w-5xl mx-auto">
       <!-- Contact Header -->
@@ -124,4 +124,4 @@ const contactInfo = {
       </div>
     </div>
   </main>
-</Layout>
+</MainLayout>
