--- a/src/pages/news/[...slug].astro
+++ b/src/pages/news/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 import PageHeader from '../../components/ui/PageHeader.astro';
 
 export async function getStaticPaths() {
@@ -36,7 +36,7 @@ const categoryColors = {
 };
 ---
 
-<Layout title={`${entry.data.title} | Dzaleka Heritage`}>
+<MainLayout title={`${entry.data.title} | Dzaleka Heritage`}>
   <article class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
     <div class="mb-8">
       <a 
@@ -153,4 +153,4 @@ const categoryColors = {
       </div>
     )}
   </article>
-</Layout>
+</MainLayout>
