--- a/src/pages/photos/index.astro
+++ b/src/pages/photos/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 import { format } from 'date-fns';
 
 // Get URL parameters
@@ -51,7 +51,7 @@ function getPaginationUrl(year: number, page: number) {
 }
 ---
 
-<Layout title="Photo Gallery">
+<MainLayout title="Photo Gallery">
   <main class="container mx-auto px-4 py-12">
     <div class="max-w-4xl mx-auto">
       <h1 class="text-4xl font-bold text-gray-900 mb-8 text-center">Photo Gallery</h1>
@@ -149,4 +149,4 @@ function getPaginationUrl(year: number, page: number) {
       );
     })}
   </main>
-</Layout>
+</MainLayout>
