--- a/src/pages/photos/submit.astro
+++ b/src/pages/photos/submit.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 import FormStatus from '../../components/applications/FormStatus.astro';
 
 const formId = 'photo-submission-form';
@@ -7,7 +7,7 @@ const cloudName = 'dcvwslmow';
 const uploadPreset = 'Dzaleka_Photo_Gallery';
 ---
 
-<Layout title="Submit Your Photo">
+<MainLayout title="Submit Your Photo">
   <main class="bg-gray-50 py-12">
     <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="bg-white rounded-lg shadow-sm p-8">
@@ -300,7 +300,7 @@ const uploadPreset = 'Dzaleka_Photo_Gallery';
       </div>
     </div>
   </main>
-</Layout>
+</MainLayout>
 
 <script is:inline src="https://upload-widget.cloudinary.com/global/all.js" defer></script>
 <script define:vars={{ cloudName, uploadPreset }}>
