--- a/src/pages/resources/[...page].astro
+++ b/src/pages/resources/[...page].astro
@@ -1,6 +1,6 @@
 ---
 // src/pages/resources/[...page].astro
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 import ResourceGrid from '../../components/resources/ResourceGrid.astro';
 import SearchBar from '../../components/ui/SearchBar.astro';
 import { getCollection } from 'astro:content';
@@ -75,7 +75,7 @@ const categoryColors = {
 
 ---
 
-<Layout title="Resource Hub">
+<MainLayout title="Resource Hub">
   <main class="container mx-auto px-4 py-8">
     {/* Hero Section */}
     <section class="relative bg-gradient-to-br from-primary-900 via-primary-800 to-primary-600 rounded-2xl mb-12 overflow-hidden">
@@ -233,7 +233,7 @@ const categoryColors = {
       )}
     </section>
   </main>
-</Layout>
+</MainLayout>
 
 <style is:global>
   .line-clamp-2 {
