--- a/src/pages/resources/submit.astro
+++ b/src/pages/resources/submit.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 ---
 
-<Layout title="Submit a Resource">
+<MainLayout title="Submit a Resource">
   <main class="container mx-auto px-4 py-8">
     {/* Hero Section */}
     <div class="max-w-2xl mx-auto mb-12">
@@ -275,7 +275,7 @@ import Layout from '../../layouts/Layout.astro';
       </div>
     </div>
   </main>
-</Layout>
+</MainLayout>
 
 <script>
   const form = document.getElementById('resourceForm');
