--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../layouts/Layout.astro';
+import MainLayout from '../layouts/MainLayout.astro';
 
 // Get all content from collections
 const services = await getCollection('services');
@@ -44,7 +44,7 @@ const popularSearches = [
 ];
 ---
 
-<Layout title="Search">
+<MainLayout title="Search">
   <main class="container mx-auto px-4 py-8">
     <div class="max-w-3xl mx-auto">
       <div class="text-center mb-8">
@@ -237,4 +237,4 @@ const popularSearches = [
       </div>
     </div>
   </main>
-</Layout>
+</MainLayout>
