--- a/src/pages/services/[page].astro
+++ b/src/pages/services/[page].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 import ServiceCard from '../../components/ServiceCard.astro';
 import ServiceStats from '../../components/services/ServiceStats.astro';
 import ServicePagination from '../../components/services/ServicePagination.astro';
@@ -49,7 +49,7 @@ if (verifiedOnly) {
 const sortedServices = sortServices(filteredServices, sortBy);
 ---
 
-<Layout title="Service Directory">
+<MainLayout title="Service Directory">
   <main>
     <!-- Hero Section -->
     <div class="bg-gradient-to-r from-primary-600 to-primary-800 px-4 py-16">
@@ -148,4 +148,4 @@ const sortedServices = sortServices(filteredServices, sortBy);
       )}
     </div>
   </main>
-</Layout>
+</MainLayout>
