--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,17 +1,19 @@
 ---
 import Layout from './Layout.astro';
-import Navbar from '../components/navigation/Navbar.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+
+interface Props {
+	title: string;
+}
 
 const { title } = Astro.props;
 ---
 
 <Layout title={title}>
-  <div class="flex flex-col min-h-screen">
-    <Navbar />
-    <main class="flex-grow">
-      <slot />
-    </main>
-    <Footer />
-  </div>
+  <Header />
+  <main class="flex-grow">
+    <slot />
+  </main>
+  <Footer />
 </Layout>
