--- a/src/pages/events/[...slug].astro
+++ b/src/pages/events/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 import { format } from 'date-fns';
 import Badge from '../../components/ui/Badge.astro';
 
@@ -22,7 +22,7 @@ function formatLocation(location: any) {
 }
 ---
 
-<Layout title={entry.data.title}>
+<MainLayout title={entry.data.title}>
   <main class="container mx-auto px-4 py-8">
     <div class="max-w-4xl mx-auto">
       {/* Back Button */}
@@ -215,4 +215,4 @@ function formatLocation(location: any) {
       </div>
     </div>
   </main>
-</Layout>
+</MainLayout>
