--- a/src/pages/events/[type]/[page].astro
+++ b/src/pages/events/[type]/[page].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../../../layouts/Layout.astro';
+import MainLayout from '../../../layouts/MainLayout.astro';
 import EventGrid from '../../../components/events/EventGrid.astro';
 import EventPagination from '../../../components/events/EventPagination.astro';
 import { getCollection } from 'astro:content';
@@ -62,7 +62,7 @@ if (paginatedEvents.length === 0 && allEvents.length > 0) {
 }
 ---
 
-<Layout title={`${type === 'upcoming' ? 'Upcoming' : 'Past'} Events`}>
+<MainLayout title={`${type === 'upcoming' ? 'Upcoming' : 'Past'} Events`}>
   <main class="container mx-auto px-4 py-8">
     <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4 mb-8">
       <div>
@@ -111,4 +111,4 @@ if (paginatedEvents.length === 0 && allEvents.length > 0) {
       </a>
     </div>
   </main>
-</Layout>
+</MainLayout>
