--- a/src/pages/resources/[slug].astro
+++ b/src/pages/resources/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
@@ -41,7 +41,7 @@ const relatedResources = allResources
   .slice(0, 3);
 ---
 
-<Layout title={`${resource.data.title} - Dzaleka Heritage`}>
+<MainLayout title={`${resource.data.title} - Dzaleka Heritage`}>
   <main class="min-h-screen">
     {/* Back Button */}
     <div class="container mx-auto px-4 py-6">
@@ -144,7 +144,7 @@ const relatedResources = allResources
                   >
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                       <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
-                      <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
+                      <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" />
                     </svg>
                     View Original
                   </a>
@@ -183,7 +183,7 @@ const relatedResources = allResources
                     <div class="flex justify-between items-center">
                       <dt class="text-sm text-gray-500 flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" viewBox="0 0 20 20" fill="currentColor">
-                          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
+                          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
                         </svg>
                         Size
                       </dt>
@@ -290,7 +290,7 @@ const relatedResources = allResources
       </section>
     )}
   </main>
-</Layout>
+</MainLayout>
 
 <style is:global>
   /* Markdown Content Styling */
