--- a/src/pages/resources/submit/thank-you.astro
+++ b/src/pages/resources/submit/thank-you.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../../layouts/Layout.astro';
+import MainLayout from '../../../layouts/MainLayout.astro';
 ---
 
-<Layout title="Thank You - Resource Submitted">
+<MainLayout title="Thank You - Resource Submitted">
   <main class="min-h-screen bg-gray-50 py-16 px-4 sm:px-6 lg:px-8">
     <div class="max-w-2xl mx-auto text-center">
       <div class="bg-white rounded-xl shadow-sm border border-gray-200 p-8 md:p-12">
@@ -67,4 +67,4 @@ import Layout from '../../../layouts/Layout.astro';
       </div>
     </div>
   </main>
-</Layout>
+</MainLayout>
