--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
 
 export async function getStaticPaths() {
   const services = await getCollection('services');
@@ -16,7 +16,7 @@ const { Content } = await service.render();
 const defaultLogo = '/images/logos/default-service.svg';
 ---
 
-<Layout title={service.data.title}>
+<MainLayout title={service.data.title}>
   <main class="container mx-auto px-4 py-8">
     <div class="max-w-4xl mx-auto">
       <!-- Breadcrumb -->
@@ -204,4 +204,4 @@ const defaultLogo = '/images/logos/default-service.svg';
       </article>
     </div>
   </main>
-</Layout>
+</MainLayout>
